Add .zsh.d script in zsh-oh-my-zsh package

--- a/zsh-oh-my-zsh/.homedir/control
+++ b/zsh-oh-my-zsh/.homedir/control
@@ -7,6 +7,7 @@ description: zsh configuration with oh-my-zsh
     https://github.com/educatux/oh-my-zsh
 
 dirs:
+    .zsh.d
     .oh-my-zsh
     .oh-my-zsh/custom
     .oh-my-zsh/lib
