--- a/artwork-icons/.homedir/control
+++ b/artwork-icons/.homedir/control
@@ -3,7 +3,7 @@ priority: normal
 maintainer: Stéphane GAUTIER <educatux@gmail.com>
 depends:
 standards-version: 1
-description: Fonts
+description: Icons
 
 dirs:
     .icons
