Global Update for MyArchLinux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,6 +70,10 @@ bind H new-window -n 'htop' 'htop -u fifr'
 bind c-j split-window -h 'mcabber'
 bind J new-window -n 'mcabber' 'mcabber'
 
+# Synchronize Panes
+unbind a
+bind a set -g synchronize-panes
+
 unbind Tab
 # bind Tab ...
 unbind BTab
