--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -122,7 +122,7 @@ set -g history-limit 4096
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-# setw -g aggressive-resize on
+setw -g aggressive-resize on
 
 set -s escape-time 0
 set -g base-index 1
